--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,18 +1,18 @@
 <div class="row">
   <div class="col-xs-12">
-    <img src="" alt class="img-responsive" />
+    <img [src]="recipe.imagePath" style="max-height: 300px ;" alt="recipe.name" class="img-responsive" />
   </div>
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <h1>Name</h1>
+    <h1>{{ recipe.name }}</h1>
   </div>
 </div>
 <div class="row">
   <div class="col-xs-12">
     <div class="btn-group">
       <button type="button" class="btn btn-primary dropdown-toggle">
-        Manage Recipe 
+        Manage Recipe
         <span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
@@ -24,13 +24,11 @@
   </div>
 </div>
 <div class="row">
-    <div class="col-xs-12">
-        Description
-    </div>
+  <div class="col-xs-12">
+    {{ recipe.description }}
+  </div>
 </div>
 
 <div class="row">
-    <div class="col-xs-12">
-        Ingredients
-    </div>
+  <div class="col-xs-12">Ingredients</div>
 </div>
