--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,1 +1,17 @@
-<p>recipe-item works!</p>
+<a
+  href="#"
+  class="list-group-item d-flex justify-content-between align-items-center"
+  (click)="onSelected()"
+  style="border: 1px solid rgba(0, 0, 0, 0.1); padding: 10px"
+>
+  <div>
+    <h4 class="mb-1">{{ recipe.name }}</h4>
+    <p class="mb-0">{{ recipe.description }}</p>
+  </div>
+  <img
+    [src]="recipe.imagePath"
+    alt="{{ recipe.name }}"
+    class="img-fluid"
+    style="max-height: 50px"
+  />
+</a>
