--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-xs-12">
+  <div class="col-12">
     <img [src]="recipe.imagePath" style="max-height: 300px ;" alt="recipe.name" class="img-responsive" />
   </div>
 </div>
@@ -9,13 +9,13 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-xs-12">
+  <div class="col-12">
     <div class="btn-group">
-      <button type="button" class="btn btn-primary dropdown-toggle">
+      <button type="button" class="btn btn-primary dropdown-toggle" appDropdown>
         Manage Recipe
         <span class="caret"></span>
       </button>
-      <ul class="dropdown-menu">
+      <ul class="dropdown-menu" style="margin-top: 40px; padding:10px">
         <li><a href="#">To Shopping List</a></li>
         <li><a href="#">Edit Recipe</a></li>
         <li><a href="#">Delete Recipe</a></li>
@@ -23,6 +23,11 @@
     </div>
   </div>
 </div>
+
+
+
+
+
 <div class="row">
   <div class="col-xs-12">
     {{ recipe.description }}
