--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,10 +1,15 @@
 <div class="row">
   <div class="col-12">
-    <img [src]="recipe.imagePath" style="max-height: 300px ;" alt="recipe.name" class="img-responsive" />
+    <img
+      [src]="recipe.imagePath"
+      style="max-height: 300px"
+      alt="recipe.name"
+      class="img-responsive"
+    />
   </div>
 </div>
 <div class="row">
-  <div class="col-xs-12">
+  <div class="col-12">
     <h1>{{ recipe.name }}</h1>
   </div>
 </div>
@@ -15,25 +20,27 @@
         Manage Recipe
         <span class="caret"></span>
       </button>
-      <ul class="dropdown-menu" style="margin-top: 40px; padding:10px">
-        <li><a href="#">To Shopping List</a></li>
-        <li><a href="#">Edit Recipe</a></li>
-        <li><a href="#">Delete Recipe</a></li>
+      <ul class="dropdown-menu" style="margin-top: 40px; padding: 10px">
+        <li><a class="dropdown-item" style="cursor: pointer;" (click)="onAddToShoppingList()">To Shopping List</a></li>
+        <li><a class="dropdown-item" href="#">Edit Recipe</a></li>
+        <li><a class="dropdown-item" href="#">Delete Recipe</a></li>
       </ul>
     </div>
   </div>
 </div>
 
-
-
-
-
 <div class="row">
-  <div class="col-xs-12">
+  <div class="col-12">
     {{ recipe.description }}
   </div>
 </div>
 
 <div class="row">
-  <div class="col-xs-12">Ingredients</div>
+  <div class="col-12">
+    <ul class="list-group">
+      <li class="list-group-item" *ngFor="let ingredient of recipe.ingredients">
+        {{ingredient.name}} - {{ingredient.amount}}
+      </li>
+    </ul>
+  </div>
 </div>
